fix jupyter notebook up to new Experiment()

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,25 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ndi.database.types'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-9c8a97a1b2b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mndi\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatabase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mExperiment\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFileNavigator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDaqSystem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mndi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatabase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtypes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mInteger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mString\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBlob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mndi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdaqsystem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdaqreaders\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMockReader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ndi.database.types'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ndi import database, Experiment, FileNavigator, DaqSystem\n",
-    "from ndi.database.types import Integer, String, Blob\n",
-    "from ndi.daqsystem.daqreaders import MockReader"
+    "from ndi.daqreaders import MockReader"
    ]
   },
   {
@@ -43,14 +30,12 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'database' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-5d41bfadf7cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Connect to database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatabase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSQL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'postgres://postgres:1Password!@localhost:5432/practice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'database' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<class 'ndi.experiment.Experiment'>: <ndi.database.sql.Table object at 0x113eef350>, <class 'ndi.daq_system.DaqSystem'>: <ndi.database.sql.Table object at 0x113eef1d0>, <class 'ndi.probe.Probe'>: <ndi.database.sql.Table object at 0x10985a350>, <class 'ndi.epoch.Epoch'>: <ndi.database.sql.Table object at 0x113eefa50>, <class 'ndi.channel.Channel'>: <ndi.database.sql.Table object at 0x113f1a0d0>}\n",
+      "<class 'sqlalchemy.ext.declarative.api.Base'>\n",
+      "immutabledict({'experiments': Table('experiments', MetaData(bind=None), Column('flat_buffer', LargeBinary(), table=<experiments>), Column('id', Integer(), table=<experiments>, primary_key=True, nullable=False), schema=None), 'daq_systems': Table('daq_systems', MetaData(bind=None), Column('experiment_id', Integer(), ForeignKey('experiments.id'), table=<daq_systems>), Column('flat_buffer', LargeBinary(), table=<daq_systems>), Column('id', Integer(), table=<daq_systems>, primary_key=True, nullable=False), schema=None), 'probes': Table('probes', MetaData(bind=None), Column('daq_system_id', Integer(), ForeignKey('daq_systems.id'), table=<probes>), Column('flat_buffer', LargeBinary(), table=<probes>), Column('id', Integer(), table=<probes>, primary_key=True, nullable=False), schema=None), 'epochs': Table('epochs', MetaData(bind=None), Column('daq_system_id', Integer(), ForeignKey('daq_systems.id'), table=<epochs>), Column('flat_buffer', LargeBinary(), table=<epochs>), Column('id', Integer(), table=<epochs>, primary_key=True, nullable=False), schema=None), 'channels': Table('channels', MetaData(bind=None), Column('probe_id', Integer(), ForeignKey('probes.id'), table=<channels>), Column('flat_buffer', LargeBinary(), table=<channels>), Column('id', Integer(), table=<channels>, primary_key=True, nullable=False), schema=None)})\n"
      ]
     }
    ],
@@ -83,9 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'FileNavigator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1df309192d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n\u001b[0m\u001b[1;32m      2\u001b[0m                    metadata_file_pattern='.*\\\\.txt')\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'FileNavigator' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')"
@@ -121,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,18 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "69: b'hello'\n",
-      "70: b'new world'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Search table in database based on query\n",
     "def show_experiments(**kwargs):\n",
@@ -179,31 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "69: b'hello'\n",
-      "70: b'new world'\n",
-      "71: b'AAAAA'\n",
-      "72: b'BBBBB'\n",
-      "73: b'CCCCC'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[69, 70, 71, 72, 73]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.add([\n",
     "    Experiment(flat_buffer=b'AAAAA'),\n",
@@ -216,32 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "updating experiment 70\n",
-      "69: b'hello'\n",
-      "71: b'AAAAA'\n",
-      "72: b'BBBBB'\n",
-      "73: b'CCCCC'\n",
-      "70: b'goodbye'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[69, 71, 72, 73, 70]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'updating experiment {newest_experiment_id}')\n",
     "db.update(Experiment, { 'id': newest_experiment_id }, { 'flat_buffer': b'goodbye' })\n",
@@ -251,58 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70: b'goodbye'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[70]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "show_experiments(flat_buffer=b'goodbye')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deleting experiment 70\n",
-      "69: b'hello'\n",
-      "71: b'AAAAA'\n",
-      "72: b'BBBBB'\n",
-      "73: b'CCCCC'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[69, 71, 72, 73]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'deleting experiment {newest_experiment_id}')\n",
     "db.delete_by_id(Experiment, newest_experiment_id)\n",
@@ -312,31 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "upserting experiment 69\n",
-      "71: b'AAAAA'\n",
-      "72: b'BBBBB'\n",
-      "73: b'CCCCC'\n",
-      "69: b'upserted (update)'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[71, 72, 73, 69]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'upserting experiment {experiment_ids[-2]}')\n",
     "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (update)' })\n",
@@ -346,29 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71: b'AAAAA'\n",
-      "72: b'BBBBB'\n",
-      "73: b'CCCCC'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[71, 72, 73]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.delete(Experiment, id=experiment_ids[-2])\n",
     "\n",
@@ -377,31 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "upserting experiment 69\n",
-      "71: b'AAAAA'\n",
-      "72: b'BBBBB'\n",
-      "73: b'CCCCC'\n",
-      "74: b'upserted (add)'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[71, 72, 73, 74]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'upserting experiment {experiment_ids[-2]}')\n",
     "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (add)' })\n",
@@ -411,20 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.delete_all(Experiment)\n",
     "\n",
