--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,19 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{<class 'ndi.experiment.Experiment'>: <ndi.database.sql.Table object at 0x113eef350>, <class 'ndi.daq_system.DaqSystem'>: <ndi.database.sql.Table object at 0x113eef1d0>, <class 'ndi.probe.Probe'>: <ndi.database.sql.Table object at 0x10985a350>, <class 'ndi.epoch.Epoch'>: <ndi.database.sql.Table object at 0x113eefa50>, <class 'ndi.channel.Channel'>: <ndi.database.sql.Table object at 0x113f1a0d0>}\n",
-      "<class 'sqlalchemy.ext.declarative.api.Base'>\n",
-      "immutabledict({'experiments': Table('experiments', MetaData(bind=None), Column('flat_buffer', LargeBinary(), table=<experiments>), Column('id', Integer(), table=<experiments>, primary_key=True, nullable=False), schema=None), 'daq_systems': Table('daq_systems', MetaData(bind=None), Column('experiment_id', Integer(), ForeignKey('experiments.id'), table=<daq_systems>), Column('flat_buffer', LargeBinary(), table=<daq_systems>), Column('id', Integer(), table=<daq_systems>, primary_key=True, nullable=False), schema=None), 'probes': Table('probes', MetaData(bind=None), Column('daq_system_id', Integer(), ForeignKey('daq_systems.id'), table=<probes>), Column('flat_buffer', LargeBinary(), table=<probes>), Column('id', Integer(), table=<probes>, primary_key=True, nullable=False), schema=None), 'epochs': Table('epochs', MetaData(bind=None), Column('daq_system_id', Integer(), ForeignKey('daq_systems.id'), table=<epochs>), Column('flat_buffer', LargeBinary(), table=<epochs>), Column('id', Integer(), table=<epochs>, primary_key=True, nullable=False), schema=None), 'channels': Table('channels', MetaData(bind=None), Column('probe_id', Integer(), ForeignKey('probes.id'), table=<channels>), Column('flat_buffer', LargeBinary(), table=<channels>), Column('id', Integer(), table=<channels>, primary_key=True, nullable=False), schema=None)})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Connect to database\n",
     "db = database.SQL('postgres://postgres:1Password!@localhost:5432/practice')"
@@ -46,21 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "experiments\n",
-      "daq_systems\n",
-      "epochs\n",
-      "probes\n",
-      "channels\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for table in db.get_tables():\n",
     "    print(table.name)"
@@ -68,21 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'FileNavigator' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1df309192d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n\u001b[0m\u001b[1;32m      2\u001b[0m                    metadata_file_pattern='.*\\\\.txt')\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'FileNavigator' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')"
@@ -114,150 +80,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "db.add_experiment(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create object using schema defined in table creation\n",
-    "Experiment = db.tables.get('experiments')\n",
-    "experiment1 = Experiment(flat_buffer=b'hello')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add object to database\n",
-    "db.add(experiment1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.add(Experiment(flat_buffer=b'new world'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Search table in database based on query\n",
-    "def show_experiments(**kwargs):\n",
-    "    with db.find(Experiment, **kwargs) as results:\n",
-    "        experiment_id = []\n",
-    "        for result in results:\n",
-    "            experiment_id.append(result.id)\n",
-    "            print(f'{result.id}: {result.flat_buffer}')\n",
-    "    return experiment_id\n",
-    "\n",
-    "experiment_ids = show_experiments()\n",
-    "newest_experiment_id = experiment_ids[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.add([\n",
-    "    Experiment(flat_buffer=b'AAAAA'),\n",
-    "    Experiment(flat_buffer=b'BBBBB'),\n",
-    "    Experiment(flat_buffer=b'CCCCC'),\n",
-    "])\n",
-    "\n",
-    "show_experiments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'updating experiment {newest_experiment_id}')\n",
-    "db.update(Experiment, { 'id': newest_experiment_id }, { 'flat_buffer': b'goodbye' })\n",
-    "\n",
-    "show_experiments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_experiments(flat_buffer=b'goodbye')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'deleting experiment {newest_experiment_id}')\n",
-    "db.delete_by_id(Experiment, newest_experiment_id)\n",
-    "\n",
-    "show_experiments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'upserting experiment {experiment_ids[-2]}')\n",
-    "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (update)' })\n",
-    "\n",
-    "show_experiments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.delete(Experiment, id=experiment_ids[-2])\n",
-    "\n",
-    "show_experiments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'upserting experiment {experiment_ids[-2]}')\n",
-    "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (add)' })\n",
-    "\n",
-    "show_experiments()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.delete_all(Experiment)\n",
-    "\n",
-    "show_experiments()"
-   ]
   }
  ],
  "metadata": {
