--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 10,
@@ -180,9 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.experiment.Experiment at 0x1167fc250>,\n",
-       " <ndi.experiment.Experiment at 0x1167fc650>,\n",
-       " <ndi.experiment.Experiment at 0x1167fc690>]"
+       "[<ndi.experiment.Experiment at 0x11be6c750>]"
       ]
      },
      "execution_count": 14,
@@ -203,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d6d57e2136af42cb987be8ecec011c30\n"
+      "0c643b02b35e4f679f000e43daa111d2\n"
      ]
     }
    ],
@@ -267,6 +265,35 @@
    ],
    "source": [
     "db.find(Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File \"../test_exp/.ndi/daqsystems/1e5fdb1c593d4d2da7ef20a963661967.dat\" already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    db.add(ds)\n",
+    "except FileExistsError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.upsert(ds)"
    ]
   },
   {
