made update_by_id()

--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.experiment.Experiment at 0x11be6c750>]"
+       "[<ndi.experiment.Experiment at 0x1194e9290>]"
       ]
      },
      "execution_count": 14,
@@ -201,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0c643b02b35e4f679f000e43daa111d2\n"
+      "11504ec120f2452da050ba94e0630e1e\n"
      ]
     }
    ],
@@ -269,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File \"../test_exp/.ndi/daqsystems/1e5fdb1c593d4d2da7ef20a963661967.dat\" already exists\n"
+      "File \"../test_exp/.ndi/daqsystems/bdf9a84be3ce457481c3f18d991a4e50.dat\" already exists\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,10 +298,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myDaq1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ds.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db.update_by_id(DaqSystem, ds.id, { 'name': 'daq2' })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds2 = db.find_by_id(DaqSystem, ds.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "daq2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ds2.name)"
+   ]
   }
  ],
  "metadata": {
