--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -52,7 +52,10 @@
    "source": [
     "ds = DaqSystem(name='myDaq1',\n",
     "              file_navigator=fn,\n",
-    "              daq_reader=MockReader)"
+    "              daq_reader=MockReader)\n",
+    "ds2 = DaqSystem(name='myDaq2',\n",
+    "               file_navigator=fn,\n",
+    "               daq_reader=MockReader)"
    ]
   },
   {
@@ -62,7 +65,7 @@
    "outputs": [],
    "source": [
     "e = Experiment(name='myExperiment3', \n",
-    "               daq_systems=[ds])"
+    "               daq_systems=[ds, ds2])"
    ]
   },
   {
@@ -120,7 +123,7 @@
     }
    ],
    "source": [
-    "e2 == db.find(Experiment, name='myExperiment3')[0]"
+    "e2 == db.find(Experiment,{'name':'myExperiment3'})[0]"
    ]
   },
   {
@@ -140,7 +143,7 @@
     }
    ],
    "source": [
-    "db.find(Experiment, name='myExperiment2')"
+    "db.find(Experiment, {'name':'myExperiment2'})"
    ]
   },
   {
@@ -149,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_results = db.find(DaqSystem, experiment_id=e.id)"
+    "ds_results = db.find(DaqSystem, {'experiment_id':e.id})"
    ]
   },
   {
@@ -158,18 +161,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ndi.daq_system.DaqSystem object at 0x118166390>, <ndi.daq_system.DaqSystem object at 0x11816a310>]\n"
+     ]
     }
    ],
    "source": [
-    "e.daq_systems[0] == ds_results[0]"
+    "print(ds_results)"
    ]
   },
   {
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.experiment.Experiment at 0x1194e9290>]"
+       "False"
       ]
      },
      "execution_count": 14,
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "db.find(Experiment)"
+    "e.daq_systems[0] == ds_results[0]"
    ]
   },
   {
@@ -198,15 +198,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11504ec120f2452da050ba94e0630e1e\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[<ndi.experiment.Experiment at 0x118145190>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(e.id)"
+    "db.find(Experiment)"
    ]
   },
   {
@@ -244,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.delete(Experiment)"
+    "db.delete_many(Experiment)"
    ]
   },
   {
@@ -276,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File \"../test_exp/.ndi/daqsystems/bdf9a84be3ce457481c3f18d991a4e50.dat\" already exists\n"
+      "File '../test_exp/.ndi/daqsystems/139e447af28d4bf3906390c200617862.dat' already exists\n"
      ]
     }
    ],
@@ -347,6 +350,33 @@
    "source": [
     "print(ds2.name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a not of type 'NDI_Object'\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    db.add('a')\n",
+    "except TypeError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
