--- a/example/Demo_Database_Query.ipynb
+++ b/example/Demo_Database_Query.ipynb
@@ -317,6 +317,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('i', 'in', [1, 2, 3, 4])>\n",
+      "('i', 'in', [1, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = Q('i') >> [1, 2, 3, 4]\n",
+    "print(i)\n",
+    "print(i())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
