added alternatives for method calls

--- a/example/Demo_Database_Query.ipynb
+++ b/example/Demo_Database_Query.ipynb
@@ -38,8 +38,10 @@
     }
    ],
    "source": [
+    "# a = Q('a').equals('apple')\n",
     "a = Q('a') == 'apple'\n",
     "print(a)\n",
+    "# print(a.query)\n",
     "print(a())"
    ]
   },
@@ -58,6 +60,7 @@
     }
    ],
    "source": [
+    "# a = Q('b').not_equals('bee')\n",
     "b = Q('b') != 'bee'\n",
     "print(b)\n",
     "print(b())"
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +83,9 @@
     }
    ],
    "source": [
+    "# z = a.and_(b)\n",
+    "# z = Q('a').equals('apple').and_(Q('b').not_equals('bee'))\n",
+    "# z = Q('a').equals('apple') & Q('b').not_equals('bee')\n",
     "z = a & b\n",
     "print(isinstance(z, Q))\n",
     "print(z)\n",
@@ -104,6 +110,9 @@
     }
    ],
    "source": [
+    "# y = a.or_(b)\n",
+    "# y = Q('a').equals('apple').or_(Q('b').not_equals('bee'))\n",
+    "# y = Q('a').equals('apple') | Q('b').not_equals('bee')\n",
     "y = a | b\n",
     "print(isinstance(y, Q))\n",
     "print(y)\n",
@@ -120,13 +129,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Query ('c', '>=', 'cat')>\n",
-      "('c', '>=', 'cat')\n"
+      "<Query ('c', '>=', 5)>\n",
+      "('c', '>=', 5)\n"
      ]
     }
    ],
    "source": [
-    "c = Q('c') >= 'cat'\n",
+    "# c = Q('c').greater_than_or_equal_to(5)\n",
+    "c = Q('c') >= 5\n",
     "print(c)\n",
     "print(c())"
    ]
@@ -140,13 +150,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Query ('d', '<', 'dog')>\n",
-      "('d', '<', 'dog')\n"
+      "<Query ('d', '<', 5)>\n",
+      "('d', '<', 5)\n"
      ]
     }
    ],
    "source": [
-    "d = Q('d') < 'dog'\n",
+    "# d = Q('d').less_than(5)\n",
+    "d = Q('d') < 5\n",
     "print(d)\n",
     "print(d())"
    ]
@@ -161,11 +172,12 @@
      "output_type": "stream",
      "text": [
       "<OrQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>]>\n",
-      "<OrQuery [<Query ('c', '>=', 'cat')>, <Query ('d', '<', 'dog')>]>\n"
+      "<OrQuery [<Query ('c', '>=', 5)>, <Query ('d', '<', 5)>]>\n"
      ]
     }
    ],
    "source": [
+    "# (a.or_(b)).and_((c.or_(d)))\n",
     "for query in ((a | b) & ( c | d)):\n",
     "    print(query)"
    ]
@@ -180,11 +192,12 @@
      "output_type": "stream",
      "text": [
       "<AndQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>]>\n",
-      "<AndQuery [<Query ('c', '>=', 'cat')>, <Query ('d', '<', 'dog')>]>\n"
+      "<AndQuery [<Query ('c', '>=', 5)>, <Query ('d', '<', 5)>]>\n"
      ]
     }
    ],
    "source": [
+    "# (a.and_(b)).or_(c.and_(d))\n",
     "for query in ((a & b) | (c & d)):\n",
     "    print(query)"
    ]
@@ -198,10 +211,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<AndQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>, <Query ('c', '>=', 'cat')>]>\n",
+      "<AndQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>, <Query ('c', '>=', 5)>]>\n",
       "<Query ('a', '==', 'apple')>\n",
       "<Query ('b', '!=', 'bee')>\n",
-      "<Query ('c', '>=', 'cat')>\n"
+      "<Query ('c', '>=', 5)>\n"
      ]
     }
    ],
@@ -221,10 +234,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<OrQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>, <Query ('c', '>=', 'cat')>]>\n",
+      "<OrQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>, <Query ('c', '>=', 5)>]>\n",
       "<Query ('a', '==', 'apple')>\n",
       "<Query ('b', '!=', 'bee')>\n",
-      "<Query ('c', '>=', 'cat')>\n"
+      "<Query ('c', '>=', 5)>\n"
      ]
     }
    ],
@@ -244,13 +257,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Query ('e', 'match', 'elephant')>\n",
-      "('e', 'match', 'elephant')\n"
+      "<Query ('e', 'match', 'ele[a-z]$')>\n",
+      "('e', 'match', 'ele[a-z]$')\n"
      ]
     }
    ],
    "source": [
-    "e = Q('e')[r'elephant']\n",
+    "e = Q('e').match(r'ele[a-z]$')\n",
     "print(e)\n",
     "print(e())"
    ]
@@ -270,7 +283,7 @@
     }
    ],
    "source": [
-    "f = Q('f') / 'fish'\n",
+    "f = Q('f').contains('fish')\n",
     "print(f)\n",
     "print(f())"
    ]
@@ -290,6 +303,7 @@
     }
    ],
    "source": [
+    "# g = Q('g').exists()\n",
     "g = +Q('g')\n",
     "print(g)\n",
     "print(g())"
@@ -310,6 +324,7 @@
     }
    ],
    "source": [
+    "# h = Q('h').exists(False)\n",
     "h = -Q('h')\n",
     "print(h)\n",
     "print(h())"
@@ -330,9 +345,36 @@
     }
    ],
    "source": [
+    "# i = Q('i').in_([1, 2, 3, 4])\n",
     "i = Q('i') >> [1, 2, 3, 4]\n",
     "print(i)\n",
     "print(i())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "QueryUnresolvedError",
+     "evalue": "The query field 'j' has not been resolved yet",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mQueryUnresolvedError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-0975b113708e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Intentional Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'j'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/Project-Brandeis/ndi-python/ndi/database/query.py\u001b[0m in \u001b[0;36m__repr__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34mf'<Query {self()}>'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;31m# Methods for combining ndi_queries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/Project-Brandeis/ndi-python/ndi/database/query.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/Project-Brandeis/ndi-python/ndi/database/query.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m             raise QueryUnresolvedError(\n\u001b[0;32m---> 47\u001b[0;31m                 f'The query field \\'{self.field}\\' has not been resolved yet')\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mQueryUnresolvedError\u001b[0m: The query field 'j' has not been resolved yet"
+     ]
+    }
+   ],
+   "source": [
+    "# Intentional Error\n",
+    "j = Q('j')\n",
+    "print(j)"
    ]
   },
   {
