--- a/example/Demo_Database_SQL_Pipeline.ipynb
+++ b/example/Demo_Database_SQL_Pipeline.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = Channel('name', 1, 'analog_in', 'source_file', 'epoch_id', 'probe_id',)"
+    "db.add_experiment(e)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.add(e)"
+    "db.find(Experiment)"
    ]
   },
   {
@@ -106,91 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, experiment in enumerate(db.find(Experiment)):\n",
-    "    print(i, experiment.name)"
+    "db.find(Channel)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "field = db._collections[Experiment].fields\n",
-    "filters = and_(\n",
-    "    field['id'] == '8ea69b5506aa4871997c8ebaede45d47', \n",
-    "    or_(\n",
-    "        field['name'] == 'notMine', \n",
-    "        field['name'] == 'nope too', \n",
-    "        field['name'] == 'myExperiment3'))\n",
-    "db._collections[Experiment].find(sqla_query=filters, as_flatbuffers=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ndi_query = (\n",
-    "    Q('id') == '8ea69b5506aa4871997c8ebaede45d47')\\\n",
-    "    & ( (Q('name')=='notMine')\\\n",
-    "      | (Q('name')=='nope too')\\\n",
-    "      | (Q('name')=='myExperiment3') )\n",
-    "for obj in db.find(Experiment, query=ndi_query):\n",
-    "    print(obj.__dict__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ndi_query = (\n",
-    "    Q('id') == '8ea69b5506aa4871997c8ebaede45d47')\\\n",
-    "    & ( (Q('name')=='notMine')\\\n",
-    "      | (Q('name')=='nope too')\\\n",
-    "      | (Q('name')=='myExperiment3') )\n",
-    "for obj in db.find(Experiment, query=ndi_query):\n",
-    "    print(obj.__dict__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e.name = 'new_name'\n",
-    "db.update(e)\n",
-    "\n",
-    "for i, experiment in enumerate(db.find(Experiment)):\n",
-    "    print(i, experiment.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.delete(e)\n",
-    "\n",
-    "for i, experiment in enumerate(db.find(Experiment)):\n",
-    "    print(i, experiment.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
