--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -88,15 +88,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = Channel('name', 1, 'analog_in', 'source_file', 'epoch_id', 'probe_id',)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "db.add(e)"
    ]
   },
@@ -113,51 +104,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "ndi_query = (\n",
+    "    Q('id') == e.id)\\\n",
+    "    & ( (Q('name') == 'notMine')\\\n",
+    "      | (Q('name') == 'nope too')\\\n",
+    "      | (Q('name') == 'myExperiment3') )\n",
+    "\n",
+    "for obj in db.find(Experiment, query=ndi_query):\n",
+    "    print(obj.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "field = db._collections[Experiment].fields\n",
     "filters = and_(\n",
-    "    field['id'] == '8ea69b5506aa4871997c8ebaede45d47', \n",
+    "    field['id'] == e.id, \n",
     "    or_(\n",
     "        field['name'] == 'notMine', \n",
     "        field['name'] == 'nope too', \n",
     "        field['name'] == 'myExperiment3'))\n",
-    "db._collections[Experiment].find(sqla_query=filters, as_flatbuffers=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ndi_query = (\n",
-    "    Q('id') == '8ea69b5506aa4871997c8ebaede45d47')\\\n",
-    "    & ( (Q('name')=='notMine')\\\n",
-    "      | (Q('name')=='nope too')\\\n",
-    "      | (Q('name')=='myExperiment3') )\n",
-    "for obj in db.find(Experiment, query=ndi_query):\n",
-    "    print(obj.__dict__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ndi_query = (\n",
-    "    Q('id') == '8ea69b5506aa4871997c8ebaede45d47')\\\n",
-    "    & ( (Q('name')=='notMine')\\\n",
-    "      | (Q('name')=='nope too')\\\n",
-    "      | (Q('name')=='myExperiment3') )\n",
-    "for obj in db.find(Experiment, query=ndi_query):\n",
-    "    print(obj.__dict__)"
+    "\n",
+    "for obj in db._collections[Experiment].find(sqla_query=filters, as_flatbuffers=False):\n",
+    "    print(obj)\n",
+    "    print('-----')\n",
+    "    new_e = Experiment.from_flatbuffer(obj['flatbuffer'])\n",
+    "    print(new_e.__dict__)"
    ]
   },
   {
@@ -216,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
