--- a/example/Demo_Database_SQL_Pipeline.ipynb
+++ b/example/Demo_Database_SQL_Pipeline.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi import database, Experiment, FileNavigator, DaqSystem, Channel\n",
+    "from ndi import database, Experiment, FileNavigator, DaqSystem, Channel, Probe, Epoch\n",
     "from ndi.daqreaders import MockReader\n",
     "from sqlalchemy import and_, or_\n",
     "from ndi.database.query import Query as Q, AndQuery, OrQuery"
@@ -97,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.find(Experiment)"
+    "experiments = db.find(Experiment)\n",
+    "print(experiments)"
    ]
   },
   {
@@ -106,7 +107,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.find(Channel)"
+    "channels = db.find(Channel)\n",
+    "print(channels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probes = db.find(Probe)\n",
+    "epochs = db.find(Epoch)\n",
+    "daq_systems = db.find(DaqSystem)\n",
+    "for name, items in [('DAQ systems', daq_systems), ('Probes', probes), ('Epochs', epochs)]:\n",
+    "    print(name)\n",
+    "    for x in items: print(x)\n",
+    "    print('---\\n')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.delete(channels)\n",
+    "db.delete(probes)\n",
+    "db.delete(epochs)\n",
+    "db.delete(daq_systems)\n",
+    "db.delete(experiments)"
    ]
   },
   {
@@ -133,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
